<resources>
    <string name="app_name">Week3App</string>
    <string name="txtProdName">Prod Name</string>
    <string name="inputProdName">Enter prod name</string>
    <string name="strQuan">Quantity</string>
    <string name="btnSave">Save</string>
    <string name="dataSaved">Data is saved</string>
    <string name="btnView">View Data</string>
    <string name="btnDel">Delete a record</string>
    <string name="btnUpdate">Update a record</string>
    <string name="btnAddOrder">Add order</string>
    <string name="btnBoth">View PrOrder</string>
    <string-array name="group">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>